[package]
authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
edition = "2021"
name = "maxwell-utils"
version = "0.11.0"

[dependencies]
log = "0.4.21"

futures = "0.3.30"
futures-intrusive = "0.5.0"
tokio = {version = "1.36.0", features = ["full"]}

actix = "0.13.3"
fastwebsockets = {version = "0.7.1", features = ["upgrade", "unstable-split"]}
http-body-util = "0.1.1"
hyper = {version = "1.2.0", features = ["http1", "client"]}
hyper-util = "0.1.3"

ahash = "0.8.11"
anyhow = "1.0.81"
bytes = "1.5.0"
dashmap = "5.5.3"
dycovec = "0.1.1"
num_cpus = "1.16.0"
once_cell = "1.19.0"

maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.22.1"}

[dev-dependencies]
futures-util = "0.3.30"
log4rs = "1.3.0"
