[package]
name = "maxwell-utils"
version = "0.11.1"
description = "Maxwell utils implementation for Rust."
authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/maxwell-dev/maxwell"
keywords = ["maxwell", "data-exchange", "msg-communication"]
exclude = [".vscode", "target", "Cargo.lock"]
edition = "2021"
rust-version = "1.75"

[dependencies]
log = "0.4.22"

futures = "0.3.30"
futures-intrusive = "0.5.0"
tokio = {version = "1.40.0", features = ["full"]}

actix = "0.13.5"
fastwebsockets = {version = "0.5.0", features = ["upgrade", "unstable-split"]}
hyper = {version = "0.14.30", features = ["http1", "client", "tcp"]}

ahash = "0.8.11"
anyhow = "1.0.87"
bytes = "1.7.1"
dashmap = "6.1.0"
dycovec = "0.1.1"
num_cpus = "1.16.0"
once_cell = "1.19.0"

maxwell-protocol = "0.24.3"

[dev-dependencies]
futures-util = "0.3.30"
log4rs = "1.3.0"
